--- a/OffshoreTrack/Views/Certificacao/New.cshtml
+++ b/OffshoreTrack/Views/Certificacao/New.cshtml
@@ -25,12 +25,12 @@
                     <div class="row">
                         <div class="col">
                             <label for="inputText" class="col-sm col-form-label">Data de Emissão:</label>
-                            <input type="date" class="form-control" id="dataEmissao" name="dataEmissao" asp-for="orgaoEmissor" />
+                            <input type="date" class="form-control" id="dataEmissao" name="dataEmissao" asp-for="dataEmissao" />
                             <br />
                         </div>
                         <div class="col">
                             <label for="inputText" class="col-sm col-form-label">Data de Validade:</label>
-                            <input type="date" class="form-control" id="dataValidade" name="dataValidade" asp-for="orgaoEmissor" />
+                            <input type="date" class="form-control" id="dataValidade" name="dataValidade" asp-for="dataValidade" />
                             <br />
                         </div>
                     </div>
