--- a/OffshoreTrack/Views/Fornecedor/New.cshtml
+++ b/OffshoreTrack/Views/Fornecedor/New.cshtml
@@ -25,6 +25,18 @@
                     <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" />
                     <br />
 
+                    <div class="row">
+                        <div class="col">
+                            <label for="inputText" class="col-sm col-form-label">Inscrição Estadual:</label>
+                            <input type="text" class="form-control" id="inscricaoEstadual" name="inscricaoEstadual" asp-for="inscricaoEstadual" />
+                        </div>
+                        <div class="col">
+                            <label for="inputText" class="col-sm col-form-label">Inscrição Municipal:</label>
+                            <input type="text" class="form-control" id="inscricaoMunicipal" name="inscricaoMunicipal" asp-for="inscricaoMunicipal" />
+                        </div>
+                    </div>
+                    <br>
+
                     <label for="inputText" class="col-sm col-form-label">Endereço:</label>
                     <input type="text" class="form-control" id="endereco" name="endereco" asp-for="endereco" />
                     <br />
