--- a/OffshoreTrack/Views/Fornecedor/Read.cshtml
+++ b/OffshoreTrack/Views/Fornecedor/Read.cshtml
@@ -32,6 +32,18 @@
                 <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" readonly />
                 <br />
 
+                <div class="row">
+                    <div class="col">
+                        <label for="inputText" class="col-sm col-form-label">Inscrição Estadual:</label>
+                        <input type="text" class="form-control" id="inscricaoEstadual" name="inscricaoEstadual" asp-for="inscricaoEstadual" readonly/>
+                    </div>
+                    <div class="col">
+                        <label for="inputText" class="col-sm col-form-label">Inscrição Municipal:</label>
+                        <input type="text" class="form-control" id="inscricaoMunicipal" name="inscricaoMunicipal" asp-for="inscricaoMunicipal" readonly/>
+                    </div>
+                </div>
+                <br>
+
                 <label for="inputText" class="col-sm col-form-label">Endereço:</label>
                 <input type="text" class="form-control" id="endereco" name="endereco" asp-for="endereco" readonly />
                 <br />
