--- a/OffshoreTrack/Views/ParteSolta/Read.cshtml
+++ b/OffshoreTrack/Views/ParteSolta/Read.cshtml
@@ -30,7 +30,7 @@
                     <div class="col-sm-3">
                         <div class="form-group">
                             <label asp-for="id_material" class="col-sm col-form-label">Status:</label>
-                        <p class="form-control" readonly>@Html.DisplayFor(model => model.status.status)</p>
+                            <p class="form-control" readonly>@Model.status?.status</p>
                         </div>
                     </div>
                 </div>
@@ -40,21 +40,20 @@
                     <div class="col">
                         <div class="form-group">
                             <label asp-for="id_material" class="col-sm col-form-label">Material:</label>
-                            <select asp-for="id_material" asp-items="ViewBag.materiais" class="form-control"></select>
+                            <p class="form-control" readonly>@Model.material?.material</p>
 
-                            <p class="form-control" readonly>@Html.DisplayFor(model => model.material.material)</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label asp-for="id_material" class="col-sm col-form-label">Fornecedor:</label>
-                            <p class="form-control" readonly>@Html.DisplayFor(model => model.fornecedor.fornecedor)</p>
+                            <p class="form-control" readonly>@Model.fornecedor?.fornecedor</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label asp-for="id_material" class="col-sm col-form-label">Local:</label>
-                            <p class="form-control" readonly>@Html.DisplayFor(model => model.local.local)</p>
+                            <p class="form-control" readonly>@Model.local?.local</p>
                         </div>
                     </div>
                 </div>
@@ -63,20 +62,18 @@
                 <div class="row">
                     <div class="col-sm-2">
                         <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                        <input type="number" class="form-control" id="quantidade" name="quantidade" asp-for="quantidade" readonly />
-
-                        <input type="number" class="form-control" id="quantidade" name="quantidade" asp-for="partesolta" readonly />
+                        <p class="form-control" readonly>@Model.quantidade</p>
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
                             <label asp-for="id_oc" class="col-sm col-form-label">Ordem de Compra:</label>
-                            <p class="form-control" readonly>@Html.DisplayFor(model => model.oc.oc)</p>
+                            <p class="form-control" readonly>@Model.oc?.oc</p>
                         </div>
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
                             <label asp-for="id_certificacao" class="col-sm col-form-label">Certificado:</label>
-                            <p class="form-control" readonly>@Html.DisplayFor(model => model.certificacao.certificacao)</p>
+                            <p class="form-control" readonly>@Model.certificacao?.certificacao</p>
                         </div>
                     </div>
                 </div>
@@ -85,7 +82,7 @@
                     <label asp-for="anexo" class="col-form-label">Anexos:</label>
                     @if(Model.anexo != null && Model.anexo.Length > 0)
                     {
-                        <a class="btn btn-secondary" href="@Url.Action("DownloadAnexo", "Material", new { id = Model.id_material })">Baixar Anexo</a>
+                        <a class="btn btn-secondary" href="@Url.Action("DownloadAnexo", "ParteSolta", new { id = Model.id_partesolta })">Baixar Anexo</a>
                         <br>
                     }
                     else
