--- a/OffshoreTrack/Views/Rateio/Edit.cshtml
+++ b/OffshoreTrack/Views/Rateio/Edit.cshtml
@@ -21,8 +21,8 @@ ViewData["Title"]="Edit";
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-
-                <form method="post" asp-action="Update">
+                <form method="post" action="/Rateio/Update">
+                    <input type="hidden" asp-for="id_rateio" />
                     <label asp-for="rateio" class="col-sm col-form-label">Rateio:</label>
                     <input type="text" class="form-control" id="rateio" asp-for="rateio" />
                     <br />
@@ -38,6 +38,7 @@ ViewData["Title"]="Edit";
                             <div class="form-group">
                                 <label asp-for="porcentagem1" class="col-form-label">Porcentagem 1:</label>
                                 <input type="text" min="1" max="100" class="form-control" id="porcentagem1" asp-for="porcentagem1" />
+                                <span asp-validation-for="porcentagem1" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
@@ -52,6 +53,7 @@ ViewData["Title"]="Edit";
                             <div class="form-group">
                                 <label asp-for="porcentagem2" class="col-form-label">Porcentagem 2:</label>
                                 <input type="text" min="1" max="100" class="form-control" id="porcentagem2" asp-for="porcentagem2" />
+                                <span asp-validation-for="porcentagem2" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
@@ -71,21 +73,22 @@ ViewData["Title"]="Edit";
 </div>
 @section Scripts
 {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
     <script>
-        $(document).ready(function(){
-        $("input[name='porcentagem1']").on('input', function() {
-            $(this).val(function(i, v) {
-            return v.replace('%','') + '%';  });
-            });
+    $(document).ready(function() {
+        $('form').submit(function(e) {
+            var porcentagem1 = parseFloat($('#porcentagem1').val().replace(',', '.'));
+            var porcentagem2 = parseFloat($('#porcentagem2').val().replace(',', '.'));
+
+            if (isNaN(porcentagem1) || isNaN(porcentagem2) || porcentagem1 + porcentagem2 != 100) {
+                alert('A soma das porcentagens deve ser 100%');
+                e.preventDefault(); // impede a submissão do formulário
+            } else {
+                // Alterar os valores de porcentagem1 e porcentagem2 para usar o ponto como separador decimal
+                $('#porcentagem1').val(porcentagem1.toFixed(2));
+                $('#porcentagem2').val(porcentagem2.toFixed(2));
+            }
         });
-        $(document).ready(function(){
-        $("input[name='porcentagem2']").on('input', function() {
-            $(this).val(function(i, v) {
-            return v.replace('%','') + '%';  });
-            });
-        });
+    });
     </script>
 }
 
