--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -192,6 +192,19 @@
             </li>
             <!-- Fim - Certificacao -->
 
+            <!-- Contrato -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#contrato_nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-file-earmark-post"></i><span>Contrato</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="contrato_nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Contrato" asp-action="Index">Lista</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Contrato" asp-action="New">Novo</a></li>
+                </ul>
+            </li>
+            <!-- Fim - Contrato -->
+
+
             <!-- Configurações-->
             @using System.Security.Claims;
             @{
@@ -208,6 +221,8 @@
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Configuração de Usuários</a></li>
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Permissao" asp-action="Index">Configuração de Permisão</a></li>
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Status" asp-action="Index">Configuração de Status</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="FormaPagamento" asp-action="Index">Configuração de Formas de Pagamento</a></li>
+
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Empresa" asp-action="Edit">Atualização dos dados da Empresa</a></li>
 
                 </ul>
